--- a/Project/student grading/index.html
+++ b/Project/student grading/index.html
@@ -18,6 +18,11 @@
     <div class="container-fluid bg-black text-white text-center w-25">
         <p> Enter Students Marks</p>
     </div>
+
+    <div class="m-2">
+        <label for="name">Enter Student Name</label>
+        <input type="text" id="sName" placeholder="Student">
+    </div>
     <div class="justify-content-between w-auto p-2 d-flex bg-danger">
         <div class="form- m-2">
             <input type="text" class="form-control" placeholder="Web development" id="web">
