--- a/Project/student grading/index.html
+++ b/Project/student grading/index.html
@@ -23,7 +23,7 @@
         <label for="name">Enter Student Name</label>
         <input type="text" id="sName" placeholder="Student">
     </div>
-    <div class="justify-content-between w-auto p-2 d-flex bg-danger">
+    <div class="justify-content-between w-auto p-2 d-flex bg-danger cols-2 flex-md-wrap">
         <div class="form- m-2">
             <input type="text" class="form-control" placeholder="Web development" id="web">
         </div>
