--- a/Project/Hotel UI - Bootstrap/index.html
+++ b/Project/Hotel UI - Bootstrap/index.html
@@ -6,25 +6,25 @@
     <title>Hotel Website | Keyur Malete</title>
 
     <!-- favicon -->
-    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="icon" href="/images/favicon.png" type="image/png" />
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/Project/Hotel UI - Bootstrap//css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
     <!-- swiper css -->
-    <link rel="stylesheet" href="/css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="/Project/Hotel UI - Bootstrap//css/swiper-bundle.min.css" />
 
     <!-- style css -->
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/responsive-style.css" />
+    <link rel="stylesheet" href="/Project/Hotel UI - Bootstrap/css/style.css" />
+    <link rel="stylesheet" href="/Project/Hotel UI - Bootstrap//css/responsive-style.css" />
   </head>
   <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="100">
     <header class="header_wrapper">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a href="" class="navbar-brand">
-            <img src="/images/logo.png" alt="logo" class="img-fluid" />
+            <img src="/Project/Hotel UI - Bootstrap//images/logo.png" alt="logo" class="img-fluid" />
           </a>
           <button
             class="navbar-toggler"
@@ -72,13 +72,13 @@
     </header>
 
     <!-- Bootstrap js -->
-    <script src="/js/popper.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="/Project/Hotel UI - Bootstrap//js/popper.min.js"></script>
+    <script src="/Project/Hotel UI - Bootstrap//js/bootstrap.min.js"></script>
 
     <!-- Swiper js -->
-    <script src="/js/swiper-bundle.min.js"></script>
+    <script src="/Project/Hotel UI - Bootstrap//js/swiper-bundle.min.js"></script>
 
     <!-- Custom js -->
-    <script src="/js/main.js"></script>
+    <script src="/Project/Hotel UI - Bootstrap//js/main.js"></script>
   </body>
 </html>
