--- a/13_Day/ex1.html
+++ b/13_Day/ex1.html
@@ -15,6 +15,8 @@
         }
     </script> -->
 
-    <script src="./ex2.js"></script>
+    <!-- <script src="./ex2.js"></script> -->
+    <script src="./ex3.js"></script>
+
 </body>
 </html>
