--- a/17_Day/ex2.html
+++ b/17_Day/ex2.html
@@ -17,6 +17,7 @@
                 <th>Name</th>
                 <th>Price</th>
                 <th>Rating</th>
+                <th>Image</th>
             </tr>
         </thead>
         <tbody>
